# spop

./: .dir-locals.el  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  build_and_run  create_libspotify_wrapper.pl  force_cmake  spopd.conf.sample
awesome/: spop.lua  spop.py
dspop/: dspop
plugins/: ao.c  awesome.c  dummy.c  notify.c  oss.c  pulse.c  savestate.c  scrobble.c  sox.c  web.c
plugins/mpris2/: mpris2-generated.c  mpris2-generated.h  mpris2-player-generated.c  mpris2-player-generated.h  mpris2-player.xml  mpris2-tracklist-generated.c  mpris2-tracklist-generated.h  mpris2.xml  plugin.c  spop-mpris2.c  spop-mpris2.h
src/: ao.c  appkey.c  audio.h  commands.c  commands.h  config.c  config.h  interface-mpd.c  interface-simple.c  interface.c  interface.h  main.c  oss.c  playlist.c  playlist.h  plugin.c  plugin.h  queue.c  queue.h  session.c  session.h  spop.h  spotify.c  spotify.h  track.c  track.h  utils.c  utils.h
systemd/: spopd.service  spopd.socket
web/: index.html
web/css/: main.css
web/js/: main.js  router.js
web/js/models/: image.js  status.js
web/js/views/: status.js
